# encrypted-matching

./: .gitignore  README.md  demo_candidate_selection.ipynb  demo_large_sets.ipynb  encrypted_matcher.py  encrypted_matching.ipynb  encryption.py  encryptor.py  match_edits.py  match_id.ipynb  match_large_sets.ipynb  match_person.ipynb  match_person.py  match_vector.py  pyproject.toml  requirements.txt  storage.py  vector_matcher.py
notebooks/: demo_cosine_similarity.ipynb  demo_distance.ipynb  demo_hashing.ipynb  demo_id.ipynb  demo_large_sets.ipynb  demo_match_person.ipynb  demo_min_hash.ipynb  demo_minhash.ipynb  test_get.py
src/fuzzy_matching/: encryption.py  match_distance.py  match_edits.py  match_multi.py  match_person.py  match_vector.py  storage.py
src/fuzzy_matching/matchers/: __init__.py  base_string.py  bases.py  distance.py  null.py  timedelta.py  vector.py
